--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
@@ -49,6 +49,9 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="onTapGestureRecognized:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="zmg-G7-DQT"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Full Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iep-zY-Rc5">
                                 <rect key="frame" x="39" y="221" width="81" height="21"/>
@@ -57,19 +60,12 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="FSS-u9-Y9H">
-                                <rect key="frame" x="248" y="348" width="121" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <segments>
-                                    <segment title="Switches"/>
-                                    <segment title="Buttons"/>
-                                </segments>
-                            </segmentedControl>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oEM-93-MPX">
                                 <rect key="frame" x="285" y="464" width="49" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="europaSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="M71-bj-b36"/>
+                                    <action selector="onSwitchChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="YjP-v6-vm8"/>
                                 </connections>
                             </switch>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kdc-fr-l7X">
@@ -78,19 +74,56 @@
                                 <connections>
                                     <action selector="championsSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="0Rf-Jq-Pus"/>
                                     <action selector="europaSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="YOb-CU-BJN"/>
+                                    <action selector="onSwitchChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Nyn-MS-uJx"/>
                                 </connections>
                             </switch>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ioz-fM-4gl">
+                                <rect key="frame" x="273" y="394" width="71" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <state key="normal" title="Select"/>
+                                <connections>
+                                    <action selector="championsPressedButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="U8A-D4-zeB"/>
+                                    <action selector="onChampionsButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iPB-F7-RXR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WyM-Zl-TKc">
+                                <rect key="frame" x="274" y="457" width="71" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <state key="normal" title="Select"/>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="FSS-u9-Y9H">
+                                <rect key="frame" x="240" y="354" width="138" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Switches"/>
+                                    <segment title="Buttons"/>
+                                </segments>
+                                <connections>
+                                    <action selector="toggleSwitchesNButtons:" destination="BYZ-38-t0r" eventType="valueChanged" id="yUa-b9-959"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="FullNameText" destination="JgI-WD-MlX" id="gcP-ga-FJj"/>
+                        <outlet property="championsSelect" destination="ioz-fM-4gl" id="yBv-3W-Iba"/>
                         <outlet property="championsSwitch" destination="Kdc-fr-l7X" id="JLs-T8-bk6"/>
+                        <outlet property="europaSelect" destination="WyM-Zl-TKc" id="u7W-w6-RX1"/>
                         <outlet property="europaSwitch" destination="oEM-93-MPX" id="oNg-Pc-HOh"/>
+                        <outlet property="fullNameText" destination="JgI-WD-MlX" id="K4D-df-xaX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="ICJ-Yv-6dc">
+                    <connections>
+                        <action selector="onTapGestureRecognized:" destination="BYZ-38-t0r" id="maL-4J-oxt"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
         </scene>
