--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
@@ -64,34 +64,33 @@
                                 <rect key="frame" x="285" y="464" width="49" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
-                                    <action selector="europaSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="M71-bj-b36"/>
-                                    <action selector="onSwitchChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="YjP-v6-vm8"/>
+                                    <action selector="onSwitchChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="c4J-5e-jEc"/>
                                 </connections>
                             </switch>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kdc-fr-l7X">
                                 <rect key="frame" x="285" y="401" width="49" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
-                                    <action selector="championsSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="0Rf-Jq-Pus"/>
-                                    <action selector="europaSwitch:" destination="BYZ-38-t0r" eventType="valueChanged" id="YOb-CU-BJN"/>
-                                    <action selector="onSwitchChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Nyn-MS-uJx"/>
+                                    <action selector="onSwitchChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Vuk-uq-cyb"/>
                                 </connections>
                             </switch>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ioz-fM-4gl">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ioz-fM-4gl">
                                 <rect key="frame" x="273" y="394" width="71" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <state key="normal" title="Select"/>
                                 <connections>
-                                    <action selector="championsPressedButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="U8A-D4-zeB"/>
-                                    <action selector="onChampionsButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iPB-F7-RXR"/>
+                                    <action selector="championsPressedButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qag-Zt-aYB"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WyM-Zl-TKc">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WyM-Zl-TKc">
                                 <rect key="frame" x="274" y="457" width="71" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <state key="normal" title="Select"/>
+                                <connections>
+                                    <action selector="championsPressedButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fk0-40-yds"/>
+                                </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="FSS-u9-Y9H">
                                 <rect key="frame" x="240" y="354" width="138" height="28"/>
@@ -121,7 +120,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="ICJ-Yv-6dc">
                     <connections>
-                        <action selector="onTapGestureRecognized:" destination="BYZ-38-t0r" id="maL-4J-oxt"/>
+                        <action selector="onTapGestureRecognized:" destination="BYZ-38-t0r" id="1v1-vs-kmG"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
