--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/LaunchScreen.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/LaunchScreen.storyboard
@@ -18,28 +18,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome to StreamNScore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKz-XI-ShV">
-                                <rect key="frame" x="17" y="366" width="381" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to StreamNScore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yKz-XI-ShV">
+                                <rect key="frame" x="13" y="278" width="388" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="33"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="By: Walter Teljega" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHT-iP-FlU">
-                                <rect key="frame" x="116" y="460" width="183" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Title Image" translatesAutoresizingMaskIntoConstraints="NO" id="oKa-m2-9sK">
+                                <rect key="frame" x="60" y="356" width="294" height="184"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By: Walter Teljega" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHT-iP-FlU">
+                                <rect key="frame" x="113" y="575" width="188" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="a9u-w4-IRf"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                        <constraints>
+                            <constraint firstItem="uHT-iP-FlU" firstAttribute="centerX" secondItem="oKa-m2-9sK" secondAttribute="centerX" id="0x0-ci-Ks9"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uHT-iP-FlU" secondAttribute="bottom" constant="258" id="Dqj-iq-hQh"/>
+                            <constraint firstItem="oKa-m2-9sK" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ImF-Bb-G2x"/>
+                            <constraint firstItem="uHT-iP-FlU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="113" id="d6L-gH-YsA"/>
+                            <constraint firstItem="yKz-XI-ShV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="13" id="eyQ-eb-rAk"/>
+                            <constraint firstItem="yKz-XI-ShV" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="guf-Ez-6Hs"/>
+                            <constraint firstItem="uHT-iP-FlU" firstAttribute="top" secondItem="oKa-m2-9sK" secondAttribute="bottom" constant="35" id="kQ1-KD-id6"/>
+                            <constraint firstItem="yKz-XI-ShV" firstAttribute="centerX" secondItem="oKa-m2-9sK" secondAttribute="centerX" id="lDs-iT-pnO"/>
+                            <constraint firstItem="yKz-XI-ShV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="234" id="rNs-Hi-PL4"/>
+                            <constraint firstItem="oKa-m2-9sK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="xWw-wh-FnD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Title Image" width="40" height="40"/>
+    </resources>
 </document>
