Rotation devices and constraints

--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/Main.storyboard
@@ -796,6 +796,6 @@ Europa League Home Page: https://www.uefa.com/uefaeuropaleague/</string>
         <image name="Title Image" width="40" height="40"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="qt7-w4-ify"/>
+        <segue reference="rBP-wJ-E6I"/>
     </inferredMetricsTieBreakers>
 </document>
