I have created clickable links and animated storyboard

--- a/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/LaunchScreen.storyboard
+++ b/StreamNScoreAssignment/StreamNScore/StreamNScore/Base.lproj/LaunchScreen.storyboard
@@ -14,7 +14,7 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3" colorLabel="IBBuiltInLabel-Yellow">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -37,7 +37,8 @@
                                 <rect key="frame" x="123" y="388" width="168" height="120"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="yKz-XI-ShV" firstAttribute="centerX" secondItem="oKa-m2-9sK" secondAttribute="centerX" id="02i-L0-9Fb"/>
                             <constraint firstItem="oKa-m2-9sK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="123" id="8B7-jt-QXf"/>
